# rusty-cellauto-1d

./: Cargo.toml  README.md
src/: cellauto.rs  celloperator.rs  lib.rs  main.rs  rule.rs
